Removes more warnings douplicated code